--- a/Resizer_of_images/Resizer_of_images/Resizer_of_images.Android/Resizer_of_images.Android.csproj
+++ b/Resizer_of_images/Resizer_of_images/Resizer_of_images.Android/Resizer_of_images.Android.csproj
@@ -87,14 +87,15 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Resizer_of_images\Resizer_of_images.csproj">
       <Project>{B065565B-6E2B-4333-9EF7-067835C9772F}</Project>
       <Name>Resizer_of_images</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\tmp_1625555901439.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
