Modified the Tab bar. Changed the background color. The concept of the app is finished. Functionality to be add.

--- a/Resizer_of_images_v2/Resizer_of_images_v2/Resizer_of_images_v2.Android/Resizer_of_images_v2.Android.csproj
+++ b/Resizer_of_images_v2/Resizer_of_images_v2/Resizer_of_images_v2.Android/Resizer_of_images_v2.Android.csproj
@@ -95,5 +95,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\tmp_1625555901439.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Icon_Resizer.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
